--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express-session": "^1.18.0",
     "mysql2": "^3.10.1",
     "paseto": "^3.1.4",
-    "pbkdf2-password": "^1.2.1"
+    "pbkdf2-password": "^1.2.1",
+    "xss": "^1.0.15"
   }
 }
